--- a/package.json
+++ b/package.json
@@ -2,12 +2,61 @@
   "name": "jiffy",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --watch src --ext ts --exec ts-node src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "start:development": "cross-env NODE_ENV=development nodemon --watch src --ext ts --exec ts-node src/index.ts",
+    "start:staging": "cross-env NODE_ENV=staging node dist/index.js",
+    "start:production": "cross-env NODE_ENV=production node dist/index.js",
+    "start:qa": "cross-env NODE_ENV=qa node dist/index.js",
+    "pm2:start": "pm2 start dist/index.js --name 'my-app' --watch --ignore-watch='uploads'",
+    "pm2:start:development": "cross-env NODE_ENV=development pm2 start dist/index.js --name 'my-app-dev' --watch --ignore-watch='uploads'",
+    "pm2:start:staging": "cross-env NODE_ENV=staging pm2 start dist/index.js --name 'my-app-staging' --watch --ignore-watch='uploads'",
+    "pm2:start:production": "cross-env NODE_ENV=production pm2 start dist/index.js --name 'my-app-prod' --watch --ignore-watch='uploads'",
+    "pm2:start:qa": "cross-env NODE_ENV=qa pm2 start dist/index.js --name 'my-app-qa' --watch --ignore-watch='uploads'",
+    "pm2:stop": "pm2 stop",
+    "pm2:restart": "pm2 restart",
+    "pm2:delete": "pm2 delete",
+    "pm2:logs": "pm2 logs"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Shivam Rawat",
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.11.0",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "config": "^3.3.12",
+    "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.10.3",
+    "nodemailer": "^6.9.14",
+    "nodemon": "^3.1.4",
+    "otp-generator": "^4.0.1",
+    "path": "^0.12.7",
+    "sequelize": "^6.37.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/body-parser": "^1.19.5",
+    "@types/config": "^0.0.41",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^22.5.5",
+    "@types/nodemailer": "^6.4.15",
+    "@types/pdfkit": "^0.12.8",
+    "@types/swagger-jsdoc": "^6.0.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
+  }
 }
