--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^22.5.5",
     "@types/nodemailer": "^6.4.15",
+    "@types/otp-generator": "^4.0.2",
     "@types/pdfkit": "^0.12.8",
     "@types/swagger-jsdoc": "^6.0.3",
     "ts-node": "^10.9.2",
