--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon --watch src --ext ts --exec ts-node src/index.ts",
+    "dev": "nodemon --watch src --ext ts --exec \"node --loader ts-node/esm src/index.ts\"",
     "build": "tsc",
     "start": "node dist/index.js",
-    "start:development": "cross-env NODE_ENV=development nodemon --watch src --ext ts --exec ts-node src/index.ts",
+    "start:development": "cross-env NODE_ENV=development nodemon --watch src --ext ts --exec \"node --loader ts-node/esm src/index.ts\"",
     "start:staging": "cross-env NODE_ENV=staging node dist/index.js",
     "start:production": "cross-env NODE_ENV=production node dist/index.js",
     "start:qa": "cross-env NODE_ENV=qa node dist/index.js",
@@ -52,12 +52,12 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.7",
-    "@types/node": "^22.5.5",
+    "@types/node": "^22.18.0",
     "@types/nodemailer": "^6.4.15",
     "@types/otp-generator": "^4.0.2",
     "@types/pdfkit": "^0.12.8",
     "@types/swagger-jsdoc": "^6.0.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.9.2"
   }
 }
