--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon --watch src --ext ts --exec \"node --loader ts-node/esm src/index.ts\"",
-    "build": "tsc",
+    "build": "tsc && npm run swagger",
     "start": "node dist/index.js",
     "start:development": "cross-env NODE_ENV=development nodemon --watch src --ext ts --exec \"node --loader ts-node/esm src/index.ts\"",
     "start:staging": "cross-env NODE_ENV=staging node dist/index.js",
@@ -20,7 +20,8 @@
     "pm2:stop": "pm2 stop",
     "pm2:restart": "pm2 restart",
     "pm2:delete": "pm2 delete",
-    "pm2:logs": "pm2 logs"
+    "pm2:logs": "pm2 logs",
+    "swagger": "node --loader ts-node/esm src/config/swagger.ts"
   },
   "keywords": [],
   "author": "Shivam Rawat",
@@ -41,6 +42,7 @@
     "otp-generator": "^4.0.1",
     "path": "^0.12.7",
     "sequelize": "^6.37.3",
+    "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
