--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/otp-generator": "^4.0.2",
     "@types/pdfkit": "^0.12.8",
     "@types/swagger-jsdoc": "^6.0.3",
+    "@types/swagger-ui-express": "^4.1.8",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
