--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.11.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "brcypt": "^1.0.1",
     "config": "^3.3.12",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
