--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,6 @@
     "skipLibCheck": true,
     "resolveJsonModule": true
   },
-  "include": ["src"],
+  "include": ["src", "services"],
   "exclude": ["node_modules", "dist"]
 }
