--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "pm2:restart": "pm2 restart",
     "pm2:delete": "pm2 delete",
     "pm2:logs": "pm2 logs",
-    "swagger": "node --loader ts-node/esm src/config/swagger.ts"
+    "swagger": "node --loader ts-node/esm src/config/swagger.ts",
+    "seed:category": "node dist/script/seedCategory.js"
   },
   "keywords": [],
   "author": "Shivam Rawat",
@@ -43,6 +44,7 @@
     "otp-generator": "^4.0.1",
     "path": "^0.12.7",
     "sequelize": "^6.37.3",
+    "slugify": "^1.6.6",
     "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
@@ -62,6 +64,6 @@
     "@types/swagger-jsdoc": "^6.0.3",
     "@types/swagger-ui-express": "^4.1.8",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.3"
   }
 }
