--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "author": "Shivam Rawat",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.967.0",
     "axios": "^1.11.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -42,6 +43,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "mysql2": "^3.10.3",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
@@ -51,7 +53,8 @@
     "slugify": "^1.6.6",
     "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -60,13 +63,14 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/multer": "^1.4.7",
+    "@types/multer": "^1.4.13",
     "@types/node": "^22.18.0",
     "@types/nodemailer": "^6.4.15",
     "@types/otp-generator": "^4.0.2",
     "@types/pdfkit": "^0.12.8",
     "@types/swagger-jsdoc": "^6.0.3",
     "@types/swagger-ui-express": "^4.1.8",
+    "@types/uuid": "^11.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
